5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4325/executions/1602_1015.log
== TEST (2019-03-20 19:09:35) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
varA = int(input("Numero 1:"))
varB = int(input("Numero 2:"))
varC = int(input("Numero 3:"))
print(min(varA,varB,varC))


-- OUTPUT:
-2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:10:17) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
varA = int(input("Numero 1:"))
varB = int(input("Numero 2:"))
varC = int(input("Numero 3:"))
print(min(varA,varB,varC))
print(varA+varB+varC-min-max)
print(max(varA,varB,varC))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(varA+varB+varC-min-max)
TypeError: unsupported operand type(s) for -: 'int' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:10:32) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
varA = int(input("Numero 1:"))
varB = int(input("Numero 2:"))
varC = int(input("Numero 3:"))
print(min(varA,varB,varC))
print(varA+varB+varC)-min-max))
print(max(varA,varB,varC))


-- ERROR:
File "XXXX", line 8
    print(varA+varB+varC)-min-max))
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:10:34) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
varA = int(input("Numero 1:"))
varB = int(input("Numero 2:"))
varC = int(input("Numero 3:"))
print(min(varA,varB,varC))
print(varA+varB+varC)-min-max))
print(max(varA,varB,varC))


-- ERROR:
File "XXXX", line 8
    print(varA+varB+varC)-min-max))
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:10:43) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
varA = int(input("Numero 1:"))
varB = int(input("Numero 2:"))
varC = int(input("Numero 3:"))
print(min(varA,varB,varC))
print((varA+varB+varC)-min-max)
print(max(varA,varB,varC))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print((varA+varB+varC)-min-max)
TypeError: unsupported operand type(s) for -: 'int' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:10:59) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
varA = int(input("Numero 1:"))
varB = int(input("Numero 2:"))
varC = int(input("Numero 3:"))
print(min(varA,varB,varC))
print(max(varA,varB,varC))
print((varA+varB+varC)-min-max)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print((varA+varB+varC)-min-max)
TypeError: unsupported operand type(s) for -: 'int' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:11:40) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
varA = int(input("Numero 1:"))
varB = int(input("Numero 2:"))
varC = int(input("Numero 3:"))
print(min(varA,varB,varC))
print(max(varA,varB,varC))
print(((varA+varB+varC)-min)-max)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(((varA+varB+varC)-min)-max)
TypeError: unsupported operand type(s) for -: 'int' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:13:21) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
varA = int(input("Numero 1:"))
varB = int(input("Numero 2:"))
varC = int(input("Numero 3:"))
total= (varA+varB+varC)
total1=(total-min-max)
print(min(varA,varB,varC))
print(total1)
print(max(varA,varB,varC))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total1=(total-min-max)
TypeError: unsupported operand type(s) for -: 'int' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:13:39) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
varA = int(input("Numero 1:"))
varB = int(input("Numero 2:"))
varC = int(input("Numero 3:"))
total= (varA+varB+varC)
totalA=(total-min-max)
print(min(varA,varB,varC))
print(totalA)
print(max(varA,varB,varC))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    totalA=(total-min-max)
TypeError: unsupported operand type(s) for -: 'int' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:13:51) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
varA = int(input("Numero 1:"))
varB = int(input("Numero 2:"))
varC = int(input("Numero 3:"))
total= (varA+varB+varC)
totalA=(total-min)
print(min(varA,varB,varC))
print(totalA)
print(max(varA,varB,varC))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    totalA=(total-min)
TypeError: unsupported operand type(s) for -: 'int' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:15:05) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
varA = int(input("Numero 1:"))
varB = int(input("Numero 2:"))
varC = int(input("Numero 3:"))
total= (varA+varB+varC)
menor = (min(varA,varB,varC))
maior = (max(varA,varB,varC))
totalA=(total-menor-maior)
print(menor)
print(totalA)
print(maior)


-- OUTPUT:
-2
0
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:15:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
varA = int(input("Numero 1:"))
varB = int(input("Numero 2:"))
varC = int(input("Numero 3:"))
total= (varA+varB+varC)
menor = (min(varA,varB,varC))
maior = (max(varA,varB,varC))
totalA=(total-menor-maior)
print(menor)
print(totalA)
print(maior)


-- EXECUTION TIME:
0.169289
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
